[glic fixit] Update glic webview position fixed to relative and add a flexbox layout.
This prevents pages from being cut off when the window height is very
small. It also adds a scrollbar if the height of the content is too big.

See before: https://screenshot.googleplex.com/Am8Kwm3fowBExiN

And after:
https://screencast.googleplex.com/cast/NjUwNzM1NTM3MzA0MzcxMnwwMmFjOGRlYS00Ng

Bug: b:509612038
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7818964
Commit-Queue: Sana Akbani <sanaakbani@google.com>
Cr-Commit-Position: refs/heads/main@{#1626533}

--- a/chrome/browser/resources/glic/glic.css
+++ b/chrome/browser/resources/glic/glic.css
@@ -270,8 +270,16 @@ webview {
   display: none;
 }
 
+#guestPanel.show-header {
+  display: flex;
+  flex-direction: column;
+}
+
 #guestPanel.show-header #webviewHeader {
   display: block;
+  position: relative;
+  width: 100%;
+  order: -1;
 }
 
 #webviewContainer {
@@ -281,11 +289,10 @@ webview {
 }
 
 #guestPanel.show-header #webviewContainer {
-  position: absolute;
+  position: relative;
   width: 100%;
-  /* If showing a login page, the window height will always be 800px */
-  height: 752px;
-  bottom: 0;
+  height: auto;
+  flex: 1;
 }
 
 .tonal-button {
